--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <html lang="en-us">
   {% include head.html %}
 
-  <link rel="shortcut icon" type="image/png" href="{{ '/assets/favicon.png' | absolute_url }}">
+  <link rel="shortcut icon" type="image/png" href="{{ 'favicon.ico' | absolute_url }}">
 
   <body>
     <div class="page-wrap">
