--- a/src/_includes/sample-data-table.html
+++ b/src/_includes/sample-data-table.html
@@ -1,7 +1,8 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jq-3.3.1/dt-1.10.18/b-1.5.4/b-html5-1.5.4/r-2.2.2/datatables.min.css"/>
 <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jq-3.3.1/dt-1.10.18/b-1.5.4/b-html5-1.5.4/r-2.2.2/datatables.min.js"></script>
 
-{% assign collection = site.data.sample %}
+{% assign collection = site.data.sample | sort: 'order' %}
+{% assign collection = collection | sort: 'order' %}
 {% assign first_item = collection.first %}
 
 <table id='datatable' class='datatable display'>
@@ -28,7 +29,7 @@
     $('#datatable').DataTable({
       scrollX: 600,
       searching: false,
-      pageLength: 5
+      pageLength: 3
     });
   });
 </script>
